# Dispersion-Assisted-GS-Phase-Recovery

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REPO_INVENTORY.md  REQUESTING_DATA.md  ROADMAP.md  SECURITY.md  Titles  _inject_70.py  _inject_71.py  _inject_72.py  _inject_73.py  _inject_74.py  _inject_75.py  _inject_76.py  _make_amp_nb.py  _repl_attention_projection.py  _repl_c_verilog_ml.py  _repl_power.py  _repl_poynting_solar.py  _repl_sympy_physics.py  _repl_ztransform.py  circuits.py  dc_motor.py  digital_logic.py  dispersion_gs_prototype.py  docker-compose.yml  email_to_callen.txt  fiber_link.py  final_phase_retrieval.ipynb  final_phase_retrieval_clean_cited.ipynb  full_phase_recovery_training_pipeline.ipynb  full_phase_recovery_training_pipeline_with_gs_vs_ai_research_expanded.ipynb  gen_training_data.py  grass.py  gs_backtest.py  (+37 more)
crawler/: Cargo.toml
crawler/src/: main.rs
data/: dispersion_gs_prototype.csv  dispersion_gs_prototype.npz  dispersion_gs_synthetic.csv  dispersion_gs_synthetic.npz
deploy/: phase_retrieval_pygame.py
dgs/: __init__.py  ac_circuits.py  adc.py  adc_snr_bits.py  algebra.py  algorithms.py  allpass_dispersion_analog.py  analog_computing_universality.py  analog_design.py  angular_momentum.py  angular_spectrum.py  antenna.py  ap_curriculum.py  ap_physics_c.py  autograd_kinematics.py  average_power.py  ballistics_radiation.py  band_theory.py  bayes_dirac_symmetry.py  bayes_inference.py  beat_frequency.py  berry_phase.py  bessel_linalg.py  binary_fsm.py  biochem_kinetics.py  biophotonics.py  biostatistics.py  bitwise.py  blackbody.py  boolean_algebra.py  branch_cuts.py  c_fundamentals.py  c_type_precision.py  card_counting.py  cas_tools.py  causality.py  ccd_photonics.py  cell_biology.py  cellular_biophysics.py  charge_configurations.py  (+263 more)
docs/: project5_proposal_ask.md  uc_davis_collab_email.txt
dotfiles/: pi_setup.sh  tmux.conf  vimrc
embedded/: fir_lowpass.c  solar_mppt.c
ethereum/: OpticalPhaseVerifier.sol  interact.py
griffiths/: atomic.py  (+20 more)
phase_cuda_pipeline/phase_cuda_pipeline/: CMakeLists.txt  README.md
phase_cuda_pipeline/phase_cuda_pipeline/include/: kernels.cuh
phase_cuda_pipeline/phase_cuda_pipeline/python/: export_measurements.py  visualizer.py
phase_cuda_pipeline/phase_cuda_pipeline/src/: kernels.cu  main.cu
photonics_ml_pipeline/: .gitignore  README.md  config.py  conftest.py  pyproject.toml
photonics_ml_pipeline/c_codegen/: __init__.py  generator.py
photonics_ml_pipeline/configs/: default.yaml
photonics_ml_pipeline/datasets/: __init__.py
photonics_ml_pipeline/docs/: api.md  index.md
photonics_ml_pipeline/examples/: run_pipeline.py
photonics_ml_pipeline/feature_extraction/: __init__.py  features.py
photonics_ml_pipeline/include/: .gitkeep
photonics_ml_pipeline/ml/: __init__.py  dataset.py  inference.py  model.py  train.py
photonics_ml_pipeline/notebooks/: 01_gaussian_beam_pipeline.ipynb
photonics_ml_pipeline/optics/: __init__.py  abcd.py
photonics_ml_pipeline/photonics/: __init__.py  dispersion.py
photonics_ml_pipeline/physics/: __init__.py  gaussian_beam.py  symbolic.py
photonics_ml_pipeline/scripts/: benchmark.py  build_notebook.py  gen_docs.py
photonics_ml_pipeline/src/: .gitkeep
photonics_ml_pipeline/tests/: test_codegen.py  test_features.py  test_ml.py  test_numerical.py  test_symbolic.py
photonics_ml_pipeline/visualization/: __init__.py  plots.py
physics_repo/src/: pyproject.toml
physics_repo/src/physkit/: __init__.py  plotting.py  units.py
ros2_phycv/: .gitignore  README.md  package.xml  setup.cfg  setup.py
ros2_phycv/ros2_phycv/: __init__.py  image_bridge.py  pst_core.py  pst_node.py  pst_rom.py  rom_export.py
ros2_phycv/test/: test_image_bridge.py  test_pst_core.py  test_pst_rom.py  test_rom_export.py
(+1295 files in other folders)
