[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dgs"
version = "0.1.0"
description = "Dispersion-assisted Gerchberg-Saxton optical phase recovery -- toolkit + physics/engineering modules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "sympy", "matplotlib", "mpmath"]

[project.optional-dependencies]
torch = ["torch"]

# the importable packages: dgs/ (the toolkit) and griffiths/ (the physics engine)
[tool.setuptools]
packages = ["dgs", "griffiths"]

# install editable:  pip install -e .
# then:  from dgs import gs_core, qubits ;  from griffiths import electrodynamics
