[package]
name    = "jalali-crawler"
version = "0.1.0"
edition = "2021"
description = "Crawl Jalali lab / arXiv / Semantic Scholar for photonics papers"

[dependencies]
reqwest  = { version = "0.12", features = ["blocking", "json"] }
scraper  = "0.21"
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap     = { version = "4",    features = ["derive"] }
anyhow   = "1"
regex    = "1"
colored  = "2"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
